--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "src/vendor/symfony"]
 	path = src/vendor/symfony
 	url = http://github.com/symfony/symfony.git
+[submodule "Imagine"]
+	path = Imagine
+	url = git://github.com/avalanche123/Imagine.git
+[submodule "vendor/imagine"]
+	path = vendor/imagine
+	url = git://github.com/avalanche123/Imagine.git
+[submodule "src/vendor/imagine"]
+	path = src/vendor/imagine
+	url = git://github.com/avalanche123/Imagine.git
