Modification des fichiers pour la librarie Imagine

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,3 +7,7 @@ hello:
 
 calendar:
     resource: @CalendarBundle/Resources/config/routing.yml
+
+
+User:
+    resource: @UserBundle/Resources/config/routing.yml	
