--- a/src/Application/UserBundle/Resources/config/validation.yml
+++ b/src/Application/UserBundle/Resources/config/validation.yml
@@ -1,4 +1,4 @@
-Application\UserBundle\Entity\UserRequest:
-    properties:
-        phone:
-            - Regex: /^\d{2}-\d{2}-\d{2}-\d{2}-\d{2}$/
+# Application\UserBundle\Entity\UserRequest:
+#     properties:
+#         phone:
+#             - Regex: /^\d{2}\d{2}\d{2}\d{2}\d{2}$/
