--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,6 +16,16 @@ framework:
         lifetime:       3600
         auto_start:     true
 
+services:
+    existdao:
+        class: existdb\eXist
+    eventmanager:
+        class: Application\CalendarBundle\Event\EventManager
+        arguments: [@existdao]
+    usermanager:
+        class: Application\UserBundle\Entity\XQueryUserManager
+        arguments: [@existdao]
+
 # Twig Configuration
 twig:
     debug:            %kernel.debug%
@@ -27,24 +37,24 @@ assetic:
     use_controller: false
 
 # Doctrine Configuration
-# doctrine:
-#     dbal:
-#         default_connection: default
-#         connections:
-#             default:
-#                 driver:   %database_driver%
-#                 host:     %database_host%
-#                 dbname:   %database_name%
-#                 user:     %database_user%
-#                 password: %database_password%
+doctrine:
+    dbal:
+        default_connection: default
+        connections:
+            default:
+                driver:   %database_driver%
+                host:     %database_host%
+                dbname:   %database_name%
+                user:     %database_user%
+                password: %database_password%
 
-#     orm:
-#         auto_generate_proxy_classes: %kernel.debug%
-#         default_entity_manager: default
-#         entity_managers:
-#             default:
-#                 mappings:
-#                     AcmeDemoBundle: ~
+    orm:
+        # auto_generate_proxy_classes: %kernel.debug%
+        default_entity_manager: default
+        entity_managers:
+            default:
+                mappings:
+                    UserBundle: ~
 
 # Swiftmailer Configuration
 swiftmailer:
