--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,21 +1,45 @@
 security:
     encoders:
-            Symfony\Component\Security\Core\User\User: plaintext
-    # providers:
-    #     default:
-    #         entity: { class: SecurityBundle:User, property: username }
-        # certificate:
-        #     users:
-        #         fabien@example.com: { roles: ROLE_USER }
+        Application\UserBundle\Entity\XQueryUser:
+            algorithm: sha512
+            encode-as-base64: false
+            iterations: 0
     providers:
-        main:
-            users:
-                foo: {password: bar, roles: ROLE_USER}
+        # main:
+        #     entity:
+        #         class: Application\UserBundle\Entity\XQueryUser
+        #         property: username
+        custom_provider:
+            id: usermanager
+
     firewalls:
-        backend:
-            pattern:    /.*
-            http_basic: true
-            logout:     true
+        profiler:
+            pattern:  ^/_profiler
+            security: false
 
+        wdt:
+            pattern:  ^/_wdt
+            security: false
 
+        login:
+            pattern: /login$
+            security: false
+
+        register:
+            pattern: /register$
+            security: false
+
+        desktop:
+            pattern:    ^.*$
+            form_login:
+                check_path: /login_check
+                login_path: /login
+                failure_path: /login
+                remember_me: false
+                post_only: true
+                default_target_path: /
+            logout:
+                path: /logout
+                target: /login
+                invalidate_session: true 
 #resource: @OrganizerBundle/Resources/config/routing.yml
